--- a/ucr_hbs/Gemfile
+++ b/ucr_hbs/Gemfile
@@ -31,6 +31,8 @@ gem 'sdoc', '~> 0.4.0',          group: :doc
   
   gem 'devise'
   
+  gem 'httparty' #For http requests and processing json responses
+  
 
 
 # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
