--- a/config/database.yml
+++ b/config/database.yml
@@ -3,23 +3,24 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-#
+#change to sqlite3 if needed but for online purposes use postgresql
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
-
+  database: databse_dev
+ #db/development.sqlite3
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
-
+  database: database_test
+  #db/test.sqlite3
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: database_prod
+      #db/production.sqlite3
